--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -69368,11 +69368,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# For more information and knowledge check links below:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prophet:\n",
+    "\n",
+    "[https://machinelearningmastery.com/time-series-forecasting-with-prophet-in-python/]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Priori:\n",
+    "\n",
+    "[https://intellipaat.com/blog/data-science-apriori-algorithm/]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Web Scraping:\n",
+    "\n",
+    "[https://realpython.com/python-web-scraping-practical-introduction/]()"
+   ]
   }
  ],
  "metadata": {
