--- a/project.ipynb
+++ b/project.ipynb
@@ -4,7 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Advanced Pandas Project"
+    "<div dir=\"rtl\" align=\"justify\">\n",
+    "    <b style=\"font-size:28px;\">\n",
+    "\n",
+    "پروژه پانداز پیشرفته    \n",
+    "\n",
+    "\n",
+    "\n",
+    "    1. ابتدا تلاش کنید از طریق کتابخانه ی sqllite3 یا sqlalchemy دیتای \n",
+    "    موجود بر روی دیتابیس خود را بخوانید \n",
+    "    \n",
+    "    2. پس از بارگیری جدول مورد نظر چند سطری از آن را فراخوانی و مشاهده کنید\n",
+    "\n",
+    "    3. حال از نظر شاخص های آماری دیتای خود را مورد سنجش و تحلیل قرار دهید تا بیشتر به آن تسلط پیدا کنید \n",
+    "\n",
+    "    4. نوبت به تمیز کردن مقادیر موجود در دیتای رسیده است:\n",
+    "    بر مبنای آن چه که آموخته اید مقادیر گمشده را پیدا و با مقادیر بهینه پر کنید؛ حال مقادیر دور افتاده و پرت را از طریق متود هایی که آموخته اید تلاش کنید شناسایی و از مجموعه داده ی خود کنار بگذارید.\n",
+    "\n",
+    "    5. سری های زمانی: تلاش کنید کشور هارا بر مبنای مدت زمانی که دیتا دارند با یکدیگر مقایسه کنید\n",
+    "    (تلاش بیشتر: از  مدل های رگرسیون برای پیش بینی امید به زندگی کشور ها در آینده کمک بگیرید. دقت داشته باشید که باید مدل خود را ارزیابی و میزان خطا و دقت آن را نمایش دهید. حواستان به شاخص هایی که برای رگرسیون انتخاب میکنید باشد تا دقت مدل خود را افزایش دهید)\n",
+    "\n",
+    "    6. تلاش کنید تمامی سطر های مربوط به یک کشور را یکی کنید و ویژگی های عددی آن ها را با مقدار میانگین و ویژگی های دسته ای را با مقدار مد پر کنید تا برای همه کشور ها یک سطر به خصوص داشته باشید\n",
+    "\n",
+    "    7. حال نوبت بررسی آماری و همبستگی شاخص ها با یکدیگر میباشد\n",
+    "\n",
+    "    8. وقت آن رسیده که تا پرسش هایی را مطرح کرده و به دنبال یافتن پاسخ های آن ها از طریق دیتای تمیز شده بگردید.\n",
+    "\n",
+    "    9. تلاش کنید نمودار های خود را از طریق plotly ترسیم کرده  و از نمودار های تدریس شده نیز بهره مند شوید.\n",
+    "\n",
+    "    10. تلاش بیشتر: از مدل های دسته بندی کمک بگیرید و با شاخص هایی که دارید مدلی بسازید تا بتواند یک خط جدید را از نظر توسعه یافته یا در حال توسعه بودن شناسایی کند؛ مدل خود را نیز ارزیابی کنید.\n",
+    "\n",
+    "    11. تلاش بیشتر: از متود های کاهش ابعاد کمک گرفته و تلاش کنید نقاط را در فضای دو یا سه بعدی نمایش دهید( برای تفکیک نقاط نیز میتوانید بر مبنای امید به زندگی ستونی به دیتا اضافه کنید تا دیتا را گستته سازی کرده باشید و نقاط با رنگ های این لیبل های گستته از هم تمایز داده شوند)\n",
+    "\n",
+    "    12. هر آن چه که احساس میکنید در پروژه ذکر نشده را انجام داده و احساس نکنید نمیتوانید از قالب پروژه خارج شوید تا از حداکثر خلاقیت خود نیز بهره مند شوید\n",
+    "\n",
+    "    \n",
+    "\n",
+    "</b>\n",
+    "</div>"
    ]
   },
   {
@@ -507,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### use time series to show decrese and increase in any feature during data time"
+    "### Use time series to show decrese and increase in any feature during data time"
    ]
   },
   {
@@ -521,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### try to use a method to make table has just one row for every country and export every feature's mean in front of thier records"
+    "Continue...."
    ]
   },
   {
@@ -529,45 +566,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### FOR MORE INFORMATION:\n",
-    "Try to fit a regression/classification model on dataset and evalute its metrics to tell how the model is working"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
