--- a/project.ipynb
+++ b/project.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<div dir=\"rtl\" align=\"justify\">\n",
-    "    <b style=\"font-size:28px;\">\n",
+    "    <b style=\"font-family:Vazir,font-size:28px;\">\n",
     "\n",
     "پروژه پانداز پیشرفته    \n",
     "\n",
