--- a/project.ipynb
+++ b/project.ipynb
@@ -55,6 +55,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can open the project in google colab by clicking the link below as well:\n",
+    "\n",
+    "👇\n",
+    "\n",
+    "[here](https://colab.research.google.com/github/showmidelo/Advanced_Pandas_karyar/blob/main/project.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data Cleaning:\n",
     "\n",
     "### library and data importing\n",
