--- a/project.ipynb
+++ b/project.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "    6. تلاش کنید تمامی سطر های مربوط به یک کشور را یکی کنید و ویژگی های عددی آن ها را با مقدار میانگین و ویژگی های دسته ای را با مقدار مد پر کنید تا برای همه کشور ها یک سطر به خصوص داشته باشید\n",
     "\n",
-    "    7. حال نوبت بررسی آماری و همبستگی شاخص ها با یکدیگر میباشد\n",
+    "    7. حال نوبت بررسی آماری و همبستگی شاخص ها با یکدیگر میباشد؛ از مقایسه توزیع ها نیز غافل نشوید\n",
     "\n",
     "    8. وقت آن رسیده که تا پرسش هایی را مطرح کرده و به دنبال یافتن پاسخ های آن ها از طریق دیتای تمیز شده بگردید.\n",
     "\n",
@@ -55,11 +55,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Colab:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "You can open the project in google colab by clicking the link below as well:\n",
     "\n",
     "👇\n",
     "\n",
     "[here](https://colab.research.google.com/github/showmidelo/Advanced_Pandas_karyar/blob/main/project.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   },
   {
